--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,6 +23,7 @@
   --color-second: #ED675F;
 
   --color-black: #12131B;
+  --color-white: #FFFFFF;
   --color-grey: #CBCBCD;
   --color-border: #E2E9F0;
   --color-button: #1A73E8;
