--- a/src/ts/components/Banner/index.module.scss
+++ b/src/ts/components/Banner/index.module.scss
@@ -18,7 +18,7 @@
   text-decoration: none;
   border-radius: var(--border-radius-s);
 
-  color: #FFFFFF;
+  color: var(--color-white);
   background-color: #A7B6FE;
   //background: linear-gradient(135deg, rgba(64,117,252,1) 0%, rgba(172,179,246,1) 100%);
 
