--- a/src/ts/components/CardWithIcon/index.module.scss
+++ b/src/ts/components/CardWithIcon/index.module.scss
@@ -14,7 +14,7 @@
 
   border-radius: 8px;
   border: 1px solid var(--color-border);
-  background-color: #FFFFFF;
+  background-color: var(--color-white);
 
   background-repeat: repeat;
   background-size: auto 100%;
