--- a/src/ts/components/DataLoader/styles/scroll.module.scss
+++ b/src/ts/components/DataLoader/styles/scroll.module.scss
@@ -4,7 +4,7 @@
 .infinite_scroll_border_bottom {
   position: sticky;
   z-index: 3;
-  background-color: white;
+  background-color: var(--color-white);
 }
 
 .infinite_scroll_border_top {
