--- a/src/ts/components/HoursChart/index.module.scss
+++ b/src/ts/components/HoursChart/index.module.scss
@@ -59,7 +59,7 @@
   }
 
   &_hour {
-    color: white;
+    color: var(--color-white);
     border-radius: 6px;
     border: 1px solid #FFFFFF;
     background-color: var(--color-first);
