--- a/src/ts/components/HoursChart/styles/legend.module.scss
+++ b/src/ts/components/HoursChart/styles/legend.module.scss
@@ -42,7 +42,7 @@
   &_count {
     color: var(--color-black);
     border: 1px solid var(--color-grey);
-    background-color: #FFFFFF;
+    background-color: var(--color-white);
   }
 
   &_title {
