--- a/src/ts/components/LineChart/styles/index.module.scss
+++ b/src/ts/components/LineChart/styles/index.module.scss
@@ -26,7 +26,7 @@
   overflow: hidden;
   line-height: var(--line_chart-height);
   text-align: left;
-  color: #FFFFFF;
+  color: var(--color-white);
   background-color: #D0D1D2;
   -webkit-print-color-adjust: exact;
 }
