--- a/src/ts/components/Races/styles/info.module.scss
+++ b/src/ts/components/Races/styles/info.module.scss
@@ -16,7 +16,7 @@
   box-sizing: border-box;
   border: var(--space-xxs) solid var(--color-border);
   color: var(--color-black);
-  background-color: white;
+  background-color: var(--color-white);
 
   animation-name: races_track_info;
   animation-iteration-count: 1;
