--- a/src/ts/components/SplashScreen/progress.module.scss
+++ b/src/ts/components/SplashScreen/progress.module.scss
@@ -23,7 +23,7 @@
     word-wrap: break-word;
     border-radius: 4px;
 
-    color: white;
+    color: var(--color-white);
     background-color: green;
     background-size: 23px 22px;
 
