--- a/src/ts/components/Sponsor/styles/index.module.scss
+++ b/src/ts/components/Sponsor/styles/index.module.scss
@@ -43,7 +43,7 @@
     white-space: nowrap;
     border-radius: var(--border-radius-s);
     border: 1px solid var(--color-border);
-    background-color: white;
+    background-color: var(--color-white);
 
     color: var(--color-button);
 
