--- a/src/ts/components/Table/styles/index.module.scss
+++ b/src/ts/components/Table/styles/index.module.scss
@@ -73,7 +73,7 @@
     height: var(--table-cell-height);
     padding: 0 4px;
     line-height: var(--table-cell-height);
-    background-color: #FFFFFF;
+    background-color: var(--color-white);
   }
 
   &_cell:first-child,
