--- a/src/ts/pages/PageWrapper/styles/sidebar.module.scss
+++ b/src/ts/pages/PageWrapper/styles/sidebar.module.scss
@@ -41,7 +41,7 @@
 
 .sidebar_item:hover,
 .sidebar_item.selected {
-  color: #FFFFFF;
+  color: var(--color-white);
   background-color: #252735;
 }
 
