--- a/src/ts/components/Extension/styles/index.module.scss
+++ b/src/ts/components/Extension/styles/index.module.scss
@@ -7,7 +7,7 @@
   padding: 24px;
   vertical-align: top;
   border-radius: var(--border-radius-l);
-  background-color: white;
+  background-color: var(--color-white);
 
   &_icon {
     display: block;
