--- a/src/ts/components/GetList/styles/index.module.scss
+++ b/src/ts/components/GetList/styles/index.module.scss
@@ -24,7 +24,7 @@
 
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius-s);
-    background-color: white;
+    background-color: var(--color-white);
   }
 
   &_title {
@@ -40,7 +40,7 @@
 
     border-radius: var(--border-radius-s);
     border: 1px solid var(--color-border);
-    background-color: white;
+    background-color: var(--color-white);
 
     &:before {
       position: absolute;
@@ -57,7 +57,7 @@
       box-sizing: border-box;
 
       transform: rotateZ(45deg);
-      background-color: white;
+      background-color: var(--color-white);
       border-right: 1px solid var(--color-border);
       border-bottom: 1px solid var(--color-border);
     }
