--- a/src/ts/components/Page/index.module.scss
+++ b/src/ts/components/Page/index.module.scss
@@ -20,7 +20,7 @@
     break-inside: auto;
     border-radius: 8px;
     border: 1px solid var(--color-border);
-    background-color: #FFFFFF;
+    background-color: var(--color-white);
   }
 
   &_icons {
@@ -56,7 +56,7 @@
   vertical-align: top;
   border-radius: 8px;
   border: 1px solid var(--color-border);
-  background-color: #FFFFFF;
+  background-color: var(--color-white);
 }
 
 .main_wrapper_item + .main_wrapper_item {
