--- a/src/ts/components/ShowSymbol/styles/index.module.scss
+++ b/src/ts/components/ShowSymbol/styles/index.module.scss
@@ -1,7 +1,9 @@
 @import 'src/styles/variables';
 
 .show_symbol_wrapper {
+  display: inline-block;
   white-space: nowrap;
+  vertical-align: middle;
 }
 
 .show_symbol {
@@ -33,9 +35,9 @@
   line-height: var(--temp-height);
   transform: rotateY(180deg);
 
-  border: 1px solid var(--color-border);
+  // border: 1px solid var(--color-border);
   color: var(--color-black);
-  background-color: white;
+  background-color: var(--color-white);
 
   &_hide {
     animation-name: show_symbol;
