--- a/src/ts/components/YearChart/styles/index.module.scss
+++ b/src/ts/components/YearChart/styles/index.module.scss
@@ -69,7 +69,7 @@
         border: 16px solid white;
         border-right: none;
         border-bottom: none;
-        background-color: white;
+        background-color: var(--color-white);
       }
 
       &_info {
@@ -90,7 +90,7 @@
         border-radius: var(--border-radius-m);
         box-shadow: 2px 2px 5px var(--color-border);
         border: 1px solid var(--color-border);
-        background-color: white;
+        background-color: var(--color-white);
       }
     }
   }
