--- a/src/ts/pages/PageWrapper/styles/footer.module.scss
+++ b/src/ts/pages/PageWrapper/styles/footer.module.scss
@@ -46,13 +46,13 @@
     &:nth-child(4n+2):hover,
     &_selected {
       background-color: #35353F;
-      --temp-color: white;
+      --temp-color: var(--color-white);
     }
 
     &:first-child:active,
     &:nth-child(4n+2):active {
       background-color: #45454F;
-      --temp-color: white;
+      --temp-color: var(--color-white);
     }
 
     &_text {
