--- a/src/ts/pages/PageWrapper/styles/index.module.scss
+++ b/src/ts/pages/PageWrapper/styles/index.module.scss
@@ -18,7 +18,7 @@
     display: block;
     height: 100px;
     width: 100%;
-    background-color: white;
+    background-color: var(--color-white);
   }
 
   &_main,
