--- a/src/ts/pages/Person/styles/print.module.scss
+++ b/src/ts/pages/Person/styles/print.module.scss
@@ -18,7 +18,7 @@
 
   border-radius: 8px;
   border: 1px solid var(--color-border);
-  background-color: #FFFFFF;
+  background-color: var(--color-white);
   color: var(--color-grey);
 }
 
