--- a/src/ts/components/GameBanner/index.module.scss
+++ b/src/ts/components/GameBanner/index.module.scss
@@ -5,7 +5,7 @@
   display: block;
   width: 100%;
   height: 300px;
-  margin: var(--space-xxl) auto 0;
+  margin: 0 auto;
 
   user-select: none;
 
