--- a/src/ts/components/Quiz/styles/question.module.scss
+++ b/src/ts/components/Quiz/styles/question.module.scss
@@ -1,6 +1,6 @@
 @import 'src/styles/variables';
 
-.quize_question {
+.quiz_question {
   &_title {
     font-size: var(--font-l);
     font-weight: 100;
