--- a/src/ts/components/Recommendations/styles/modal.module.scss
+++ b/src/ts/components/Recommendations/styles/modal.module.scss
@@ -20,6 +20,7 @@
     font-weight: 100;
     font-size: var(--font-s);
     margin: var(--space-xs) 0 0 0;
+    line-height: 1.5;
     color: var(--color-black);
   }
 
