--- a/src/ts/components/BarChart/index.module.scss
+++ b/src/ts/components/BarChart/index.module.scss
@@ -23,7 +23,7 @@
     -webkit-print-color-adjust: exact;
 
     &:hover {
-      background-color: #ED675F;
+      background-color: var(--color-second);
     }
   }
 
