--- a/src/ts/components/CustomSelect/styles/index.module.scss
+++ b/src/ts/components/CustomSelect/styles/index.module.scss
@@ -25,6 +25,10 @@
     background-color: var(--color-white);
   }
 
+  &_search {
+    padding-top: var(--space-xxxs);
+  }
+
   &_container {
     position: relative;
   }
