--- a/src/ts/components/UiKit/styles/switch.module.scss
+++ b/src/ts/components/UiKit/styles/switch.module.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 42px;
+  height: var(--temp-size);
   padding: 0;
   margin: 0;
 
