--- a/src/ts/components/UiKit/styles/index.module.scss
+++ b/src/ts/components/UiKit/styles/index.module.scss
@@ -1,16 +1,18 @@
 @import 'src/styles/variables';
 
 .ui_kit_common {
+  --temp-size: 42px;
+
   font-size: var(--font-s);
   font-weight: 100;
 
   display: inline-block;
   width: 100%;
-  height: 42px;
+  height: var(--temp-size);
   padding: 0 var(--space-l);
   margin: 0;
 
-  line-height: 42px;
+  line-height: var(--temp-size);
   text-align: left;
   box-sizing: border-box;
   vertical-align: top;
