--- a/src/ts/components/Cards/styles/index.module.scss
+++ b/src/ts/components/Cards/styles/index.module.scss
@@ -1,15 +1,18 @@
 @import 'src/styles/variables';
 
 .card {
+  position: relative;
   display: inline-block;
   width: 100%;
-  padding: var(--space-s);
+  padding: var(--space-xxl) var(--space-s) var(--space-s);
   margin: 0 var(--space-xxl) var(--space-xxl) 0;
-  border-radius: var(--border-radius-m);
-  border: 1px solid var(--color-border);
+
   page-break-inside: avoid;
   box-sizing: border-box;
   vertical-align: top;
+
+  border-radius: var(--border-radius-m);
+  border: 1px solid var(--color-border);
   background-color: var(--color-white);
 
   &_wrapper {
@@ -18,21 +21,36 @@
   }
 
   &_title {
+    position: absolute;
+    top: -13px;
+    left: 20%;
+    right: 20%;
+
     font-size: var(--font-m);
     font-weight: bold;
-    display: block;
+    display: inline-block;
+    padding: var(--space-xxs) var(--space-s);
     margin: 0 0 var(--space-l);
 
     line-height: 1.3;
-    white-space: normal;
+    white-space: nowrap;
+    overflow: hidden;
     text-overflow: ellipsis;
     text-align: center;
+
+    border-radius: var(--border-radius-s);
+    border: 1px solid var(--color-border);
+    background-color: var(--color-white);
   }
 
   &_line {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: var(--space-xxs) var(--space-xxs) var(--space-xxxs);
+
     white-space: nowrap;
-    padding: var(--space-xxs);
     box-sizing: border-box;
     border: none;
 
@@ -40,26 +58,52 @@
     &_value {
       font-size: var(--font-s);
       position: relative;
+
       display: inline-block;
+      width: max-content;
+
       line-height: 1.3;
       white-space: normal;
       text-overflow: ellipsis;
       vertical-align: top;
       box-sizing: border-box;
       text-align: left;
-    }
 
-    &_title {
-      width: 60%;
+      color: var(--color-42);
     }
 
     &_value {
-      width: 40%;
       text-align: right;
+    }
+  }
+
+  &_line_with_template {
+    display: block;
+    text-align: center;
+    margin-top: var(--space-xxs);
+    border-top: 2px dotted var(--color-border);
+
+    &_title {
+      font-size: var(--font-s);
+
+      display: block;
+      padding: var(--space-xxs) var(--space-xxs) var(--space-xxs);
+
+      line-height: 1.3;
+      white-space: normal;
+      text-overflow: ellipsis;
+      vertical-align: top;
+      box-sizing: border-box;
+
+      color: var(--color-42);
     }
   }
 }
 
 .card_line + .card_line {
   border-top: 1px solid var(--color-border);
+}
+
+.card_line_with_template > .line_chart  {
+  margin-top: 0;
 }
